--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,7 +13,7 @@
   <nz-footer>
     <div>
       <br/>
-      <img src="assets/arqaam-13 1.png"/><br/>
+      <img src="assets/arqaam-13 1.png" alt=""/><br/>
       <a routerLink="/terms">Terms Of Use </a><br/>
       <a routerLink="/dataprotection">Data Protection Declaration</a><br/>
       <a routerLink="/imprint">Imprint</a><br/><br/>
@@ -23,7 +23,6 @@
         style="line-height: 28px;"
         href="http://arqaam.org"
         target="_blank"
-        href="#"
       >
         Logframe Lab ©2020 developed By Arqaam GmbH
       </a>
