--- a/src/app/profile-menu/authenticated-user-menu/authenticated-user-menu.component.html
+++ b/src/app/profile-menu/authenticated-user-menu/authenticated-user-menu.component.html
@@ -2,6 +2,9 @@
   <ng-template [ngIf]="isIndicatorAdmin()">
     <li nz-menu-item><a routerLink="/manage-indicators"></a><i nz-icon nzType="table" nzTheme="outline"></i>Manage indicators</li>
   </ng-template>
+  <ng-template [ngIf]="isIndicatorAdmin()">
+    <li nz-menu-item><a routerLink="/manage-indicators/approve-uploaded"></a><i nz-icon nzType="carry-out" nzTheme="outline"></i>Approve indicators</li>
+  </ng-template>
   <ng-template [ngIf]="isSecAdmin()">
     <li nz-menu-item><a routerLink="/user-management"><i nz-icon nzType="lock" nzTheme="outline"></i>Manage users</a>
     </li>
