--- a/src/app/pages/indicator/indicatorfilters/indicatorfilters.component.scss
+++ b/src/app/pages/indicator/indicatorfilters/indicatorfilters.component.scss
@@ -22,7 +22,7 @@
   width: 100%;
 }
 .filterText{
-  position: absolute;
+  position: relative;
   left: 23rem;
   top: 6rem;
   text-transform: uppercase;
