--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -37,7 +37,7 @@ nz-layout {
 }
 
 nz-content {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
+  display: block;
+  //flex-direction: row;
+  //justify-content: center;
 }
