--- a/src/app/pages/indicator/downloadresult/downloadresult.component.html
+++ b/src/app/pages/indicator/downloadresult/downloadresult.component.html
@@ -1,37 +1,19 @@
-<div
-  style="
-    flex-direction: row;
-    display: inline-flex;
-    margin: 50px;
-    min-height: 300px;
-  "
->
-  <a
-    style="
-      display: inline-block;
-      text-align: center;
-      min-height: 300px;
-      margin-top: 20px;
-    "
-    (click)="downloadFile('docx')"
-  >
+<div>
+  <a (click)="downloadFile('docx')">
     <img src="assets/icons-ms-word-96.png" /><br />
     <i nz-icon nzType="download"></i>
     Download Indicators Word<br />
     (EU format)
   </a>
-  <a
-    style="
-      display: inline-block;
-      text-align: center;
-      margin-left: 20px;
-      margin-top: 20px;
-      min-height: 300px;
-    "
-    (click)="downloadFile('xlsx')"
-  >
+  <a id='downloadExcel' (click)="downloadFile('xlsx')">
     <img src="assets/icons-microsoft-excel-2019-96.png" /><br />
     <i nz-icon nzType="download"></i>
     Download Indicators Excel<br />
+  </a>
+  <a (click)="downloadFile('dfid')">
+    <img src="assets/icons-microsoft-excel-2019-96.png" alt="excel logo"/><br />
+    <em nz-icon nzType="download"></em>
+    Download Indicators Excel<br />
+    (DFID format)
   </a>
 </div>
