set placement rightTop for popover

--- a/src/app/pages/indicator/indicator.component.html
+++ b/src/app/pages/indicator/indicator.component.html
@@ -10,6 +10,7 @@
       nzPopoverTrigger="click"
       [nzPopoverContent]="contentTemplate"
       class="stepIcon"
+      [nzPopoverPlacement]="'rightTop'"
     >
       ?
     </button>
@@ -38,6 +39,7 @@
       nzPopoverTrigger="click"
       [nzPopoverContent]="contentTemplate"
       class="stepIcon"
+      [nzPopoverPlacement]="'rightTop'"
     >
       ?
     </button>
@@ -63,6 +65,7 @@
       nzPopoverTrigger="click"
       [nzPopoverContent]="contentTemplate"
       class="stepIcon"
+      [nzPopoverPlacement]="'rightTop'"
     >
       ?
     </button>
@@ -89,6 +92,7 @@
       nzPopoverTrigger="click"
       [nzPopoverContent]="contentTemplate"
       class="stepIcon"
+      [nzPopoverPlacement]="'rightTop'"
     >
       ?
     </button>
@@ -120,6 +124,7 @@
       nzPopoverTrigger="click"
       [nzPopoverContent]="contentTemplate"
       class="stepIcon"
+      [nzPopoverPlacement]="'rightTop'"
     >
       ?
     </button>
@@ -146,6 +151,7 @@
       nzPopoverTrigger="click"
       [nzPopoverContent]="contentTemplate"
       class="stepIcon"
+      [nzPopoverPlacement]="'rightTop'"
     >
       ?
     </button>
